fix: Swedish capitalization (aldrig två versaler i rad)

--- a/data/se.danielnylander.lugnarummet.desktop
+++ b/data/se.danielnylander.lugnarummet.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Calming Room
-Name[sv]=Lugna Rummet
+Name[sv]=Lugna rummet
 GenericName=Sensory Regulation
 GenericName[sv]=Sensorisk reglering
 Comment=Breathing exercises, calming strategies and stress meter for autism and ADHD
