Use English display names

--- a/data/se.danielnylander.lugnarummet.desktop
+++ b/data/se.danielnylander.lugnarummet.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=Calming Room
+Name=Calm Room
 Name[sv]=Lugna rummet
 GenericName=Sensory Regulation
 GenericName[sv]=Sensorisk reglering
