Add Autismappar desktop category

--- a/data/se.danielnylander.lugnarummet.desktop
+++ b/data/se.danielnylander.lugnarummet.desktop
@@ -9,6 +9,6 @@ Exec=lugnarummet
 Icon=se.danielnylander.lugnarummet
 Terminal=false
 Type=Application
-Categories=GNOME;GTK;Utility;Accessibility;
+Categories=GNOME;GTK;Utility;Accessibility;Autismappar
 Keywords=calm;breathe;sensory;autism;adhd;anxiety;
 Keywords[sv]=lugn;andas;sensorisk;autism;adhd;ångest;
